--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
     <title>GIT</title>
 </head>
 <body>
-    <h1>NO ENTIENDO00001</h1>
+    <h1>NO ENTIENDO0000</h1>
+    <p>Momo</p>
 </body>
 </html>
