--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>NO ENTIENDO0000</h1>
+    <h1>NO ENTIENDO</h1>
     <p>Momo</p>
+    <p>El gato</p>
 </body>
 </html>
